--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="robots" content="index, follow, noarchive" />
 	<meta name="description" content="Guild Wars 2 timers and clock for world boss meta events, with walkthroughs and daily achievement guide." />
 	<meta name="google-site-verification" content="hPcBd74DxlBzpTu6wO6DkIcOVFLu9SOMT-GQ1MI3fbg" />
-	<meta property="fb:page_id" content="275711502600805" />
+	<meta property="fb:admins" content="1028896297" />
 
 	<!-- Stylesheets -->
 	<link rel="shortcut icon" type="image/x-icon" href="img/event/boss.png" />
