Minor JP info and map page updates

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
 				<input id="mapCoordinatesRegion" type="text" />
 			</div>
 			<div id="itemMapButtons">
-				<span><a href="http://www.reddit.com/r/gw2timer" target="_blank">GW2Timer.com</a></span>
-				<img id="mapCompassButton" src="img/map/compass.png" alt="compass" />
+				<a title="Go to Forum" href="http://forum.renaka.com/forum/368355/" target="_blank">GW2Timer.com</a>
+				<img title="Toggle Right Panel" id="mapCompassButton" src="img/map/compass.png" alt="compass" />
 			</div>
 		</section>
 	</div><!-- End of panelLeft -->
@@ -146,11 +146,17 @@
 			<time id="itemTimeLocal" class="itemTimeDigital">00:00</time>
 			<time id="itemTimeServer" class="itemTimeDigital">16:00</time>
 			<div id="itemSocial">
-				<a id="itemSocialInfo" title="&lt;dfn&gt;Clock:&lt;/dfn&gt; Click a waypoint icon to autocopy to clipboard.
+				<a title="&lt;dfn&gt;Clock:&lt;/dfn&gt; Click a waypoint icon to autocopy to clipboard.
 					Green clock tick is chain start, orange tick is minimum time chain is predicted to finish, red tick is average."
-					href="http://i.imgur.com/KvJEr58.png" target="_blank"></a>
-				<a id="itemSocialFB" title="&lt;dfn&gt;Like GW2Timer on Facebook :)&lt;/dfn&gt;" href="http://www.facebook.com/gw2timer" target="_blank"></a>
-				<a id="itemSocialTT" title="&lt;dfn&gt;Tweet GW2Timer on Twitter :)&lt;/dfn&gt;" href="http://twitter.com/intent/tweet?text=http%3A%2F%2FGW2Timer.com%20-%20World%20Boss%20Timers%20and%20Daily%20Map%20Guide" target="_blank"></a>
+					href="http://i.imgur.com/KvJEr58.png" target="_blank">
+					<img src="img/ui/info.png" alt="Info" />
+				</a>
+				<a title="&lt;dfn&gt;Like GW2Timer on Facebook :)&lt;/dfn&gt;" href="http://www.facebook.com/gw2timer" target="_blank">
+					<img src="img/ui/fb.png" alt="Facebook" />
+				</a>
+				<a title="&lt;dfn&gt;Tweet GW2Timer on Twitter :)&lt;/dfn&gt;" href="http://twitter.com/intent/tweet?text=http%3A%2F%2FGW2Timer.com%20-%20World%20Boss%20Timers%20and%20Daily%20Map%20Guide" target="_blank">
+					<img src="img/ui/tt.png" alt="Twitter" />
+				</a>
 			</div>
 		</section>
 		<!-- Menu, if these IDs were changed, change the <article> tags' too
